# heroflow

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
examples/: linear_regression.py
heroflow/: __init__.py
heroflow/core/: autograd.cpp  ops.cpp  tensor.cpp  tensor.hpp
heroflow/python/: bindings.cpp  nn.py  optim.py
tests/cpp/: autograd_test.cpp  tensor_test.cpp
tests/python/: test_bindings.py  test_debug.py  test_minimal.py  test_xor.py
